# acgi

./: .gitignore  COPYING  Makefile.am  README  acinclude.m4  configure.ac
acgi.xcodeproj/: project.pbxproj
acgi.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
build-aux/: autotools.sh  git-tar-name.txt
include/: acgi.h  starcgi.h
lib/: libacgi-error.c  libacgi-error.h  libacgi-hash.c  libacgi-hash.h  libacgi-memory.c  libacgi-memory.h  libacgi-parse-argv.c  libacgi-parse-argv.h  libacgi-parse-cookies.c  libacgi-parse-cookies.h  libacgi-parse-environ.c  libacgi-parse-environ.h  libacgi-parse-get.c  libacgi-parse-get.h  libacgi-parse-post.c  libacgi-parse-post.h  libacgi-poll-cgi.c  libacgi-poll-cgi.h  libacgi-poll-fcgi.c  libacgi-poll-fcgi.h  libacgi-poll-scgi.c  libacgi-poll-scgi.h  libacgi-session.c  libacgi-session.h  libacgi-string.c  libacgi-string.h  libacgi-template.c  libacgi-template.h  libacgi-value.c  libacgi-value.h  libacgi.c  libacgi.h  libacgi.sym  libstarcgi-memory.c  libstarcgi-memory.h  libstarcgi.h  libstarcgi.sym
src/: test-fcgi.c  vars-main.c
starcgi.xcodeproj/: project.pbxproj
starcgi.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
